# libuipc

./: .dockerignore  .gitignore  .gitmodules  .uipc_root  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HELLO.md  LICENSE  NOTICE  README.md  pyproject.toml  xmake.lua
apps/examples/usd/: CMakeLists.txt  main.cpp  xmake.lua
apps/tests/: CMakeLists.txt  catch_main.cpp  xmake.lua
apps/tests/backends/: xmake.lua
apps/tests/common/: range.cpp  run_length_encode.cpp  timer.cpp  xmake.lua
apps/tests/core/: abs_file.cpp  attribute_collection.cpp  constitution.cpp  contact_model.cpp  discrete_shell_bending_constitution.cpp  engine.cpp  geometry_atlas.cpp  gltf_io.cpp  object.cpp  scene.cpp  scene_factory.cpp  scene_io.cpp  serializer.cpp  simplicial_complex.cpp  stack_trace.cpp  subscene_model.cpp  uipc_relative_source_file.cpp  xmake.lua
apps/tests/geometry/: CMakeLists.txt  affine_body_quantity.cpp  apply_region.cpp  closest_vertex_triangle_pairs.cpp  codim_affine_body_quantity.cpp  compute_d_hat.cpp  compute_volume.cpp  extract_surface.cpp  factory.cpp  flip_inward_triangles.cpp  instancing.cpp  label_graph_color.cpp  label_open_edge.cpp  label_surface.cpp  mesh_io.cpp  optimal_transform.cpp  points_from_volume.cpp  rigid_to_affine_body.cpp  spreadsheet.cpp  tetrahedralize.cpp  urdf_io.cpp  write_mesh.cpp  xmake.lua
apps/tests/gui/: hello_bgfx.cpp
apps/tests/regression/: CMakeLists.txt  fem_mas_soft_vertex_stitch_regression.cpp  xmake.lua
apps/tests/sanity_check/: half_plane_vertex_distance_check.cpp  simplicial_surface_distance_check.cpp  simplicial_surface_intersection_check.cpp  xmake.lua
apps/tests/sim_case/: 0_abd_gravity.cpp  10_abd_ground_contact.cpp  11_abd_ramp_sliding.cpp  12_abd_self_ground_contact.cpp  13_fem_3d_gravity.cpp  14_fem_3d_ground_contact.cpp  15_fem_3d_fixed_point.cpp  16_fem_3d_scaling.cpp  17_fem_multi_constituion.cpp  18_abd_fem_contact.cpp  27_particle_abd.cpp  (+118 more)
python/: .gitignore  README.md  pyproject.toml  setup.py  uid_info.py  uipc_info.py
python/examples/: abd_cube_shell_plastic_crease_demo.py  abd_cube_shell_strain_plastic_crease_demo.py  abd_cube_shell_stress_plastic_crease_demo.py  prismatic_joint_limit_gui_demo.py  revolute_joint_limit_gui_demo.py
python/tests/: conftest.py  test_abd_fem.py  test_affine_body.py  test_affine_body_external_force.py  test_affine_body_external_wrench.py  test_asset_repo.py  test_attrib.py  test_attribute.py  test_contact_fd.py  test_external_wrench_abd.py  test_fem_link.py  test_finite_element.py  test_implicit.py  test_module.py  test_nsight.py  test_particle_ground.py  test_profile.py  test_scene.py  test_simplicial_complex.py  test_simulation_stats.py  test_transform.py  test_typing.py  test_unit.py
python/tests_next/: test_geometry.py  test_module.py  test_unit.py
src/: CMakeLists.txt  xmake.lua
src/backends/: CMakeLists.txt  xmake.lua
src/constitution/: CMakeLists.txt  affine_body_constitution.cpp  affine_body_d6_joint.cpp  affine_body_driving_prismatic_joint.cpp  affine_body_driving_revolute_joint.cpp  affine_body_driving_spherical_joint.cpp  affine_body_external_force.cpp  affine_body_external_wrench.cpp  affine_body_fixed_joint.cpp  affine_body_free_joint.cpp  affine_body_prismatic_joint.cpp  affine_body_prismatic_joint_external_force.cpp  affine_body_prismatic_joint_limit.cpp  affine_body_revolute_joint.cpp  affine_body_revolute_joint_external_force.cpp  affine_body_revolute_joint_limit.cpp  affine_body_rod.cpp  affine_body_shell.cpp  affine_body_spherical_joint.cpp  arap.cpp  discrete_shell_bending.cpp  elastic_moduli.cpp  embedded_collision_mesh.cpp  external_articulation_constraint.cpp  external_wrench_abd.cpp  finite_element_external_force.cpp  hookean_spring.cpp  inter_affine_body_constitution.cpp  inter_affine_body_extra_constitution.cpp  inter_primitive_constitution.cpp  neo_hookean_shell.cpp  neohookean_pattern.cpp  particle.cpp  plastic_discrete_shell_bending.cpp  soft_transform_constraint.cpp  soft_vertex_edge_stitch.cpp  soft_vertex_stitch.cpp  soft_vertex_triangle_stitch.cpp  stable_neo_hookean.cpp  strain_limiting_baraff_witkin.cpp  (+4 more)
src/core/: CMakeLists.txt  xmake.lua
src/cuda_sanity_check/: CMakeLists.txt  context.cu  context.h  cuda_sanity_checker.cu  cuda_sanity_checker.h  cuda_sanity_checker_auto_register.cu  cuda_sanity_checker_auto_register.h  cuda_sanity_checker_collection.cu  cuda_sanity_checker_collection.h  cuda_sanity_checker_exception.h  dllexport.cu  entrance.cu  entrance.h  half_plane_vertex_distance_check.cu  primtive_contact.h  simplicial_surface_distance_check.cu  simplicial_surface_intersection_check.cu  simplicial_volume_check.cu
src/geometry/: CMakeLists.txt  apply_region.cpp  closest_vertex_edge_pairs.cpp  closest_vertex_triangle_pairs.cpp  closure.cpp  compute_mesh_area.cpp  compute_mesh_d_hat.cpp  compute_mesh_length.cpp  compute_mesh_volume.cpp  compute_proper_d_hat.cpp  compute_vertex_volume.cpp  constitution_type.cpp  distance.cpp  extract_surface.cpp  factory.cpp  flip_inward_triangles.cpp  graph_partition.cpp  intersection.cpp  is_trimesh_closed.cpp  label_connected_vertices.cpp  label_graph_color.cpp  label_open_edge.cpp  label_region.cpp  label_surface.cpp  label_triangle_orient.cpp  merge.cpp  mesh_partition.cpp  octree.cpp  optimal_transform.cpp  points_from_volume.cpp  simplex_utils.cpp  tetrahedralize.cpp  xmake.lua
src/gui/: CMakeLists.txt
src/io/: CMakeLists.txt  scene_io.cpp  simplicial_complex_io.cpp  spread_sheet_io.cpp  stl_reader.h  urdf_io.cpp  xmake.lua
src/pybind/: CMakeLists.txt  xmake.lua
src/sanity_check/: CMakeLists.txt  context.cpp  context.h  entrance.cpp  half_plane_vertex_distance_check.cpp  mesh_partition_check.cpp  primtive_contact.h  sanity_checker.cpp  sanity_checker_collection.cpp  sanity_checker_collection.h  simplicial_surface_distance_check.cpp  simplicial_surface_intersection_check.cpp  simplicial_volume_check.cpp  xmake.lua
src/usd/: CMakeLists.txt  Develop.md  develop.md  prim.cpp  schema.h  stage.cpp  usd.cpp
src/vdb/: CMakeLists.txt  dll_export.h  points_from_volume.cpp  points_from_volume.h
(+1300 files in other folders)
