[build-system]
requires = ["scikit-build-core>=0.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyuipc"
authors = [
    {name = "Zihang Zhu", email = "paradise_craftsman@hotmail.com"},
]
maintainers = [
    {name = "Zihang Zhu",email = "paradise_craftsman@hotmail.com"},
    {name = "Lu Xinyu", email = "lxy819469559@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
version = "0.9.0"
dependencies = [
    "numpy", "polyscope>=2.5.0, <3.0.0"
]
requires-python = ">=3.10, <3.14"
description = "A Cross-Platform Modern C++20 Library of Unified Incremental Potential Contact (CUDA 12.6+ required)"
keywords = ["ipc", "computer graphics", "physics simulation", "cuda", "fem", "contact"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://spirimirror.github.io/libuipc-doc/"
Issues = "https://github.com/spiriMirror/libuipc/issues"

[project.optional-dependencies]
gui = ["polyscope"]
dev = ["pytest"]

[tool.scikit-build]
cmake.source-dir = ".."
cmake.build-type = "Release"
cmake.args = [
    "-DUIPC_BUILD_PYBIND=1",
    "-DUIPC_BUILD_EXAMPLES=OFF",
    "-DUIPC_BUILD_TESTS=OFF",
    "-DUIPC_BUILD_BENCHMARKS=OFF",
    "-DUIPC_CI_BUILD_WHEEL=ON",
]
build-dir = "build/{wheel_tag}"
wheel.packages = ["uipc"]

[tool.scikit-build.sdist]
include = [
    "../CMakeLists.txt",
    "../CMakePresets.json",
    "../cmake/**",
    "../external/**",
    "../scripts/**",
    "../src/**",
]

[tool.pytest.ini_options]
addopts = ["-s"]
markers = [
    "basic: mark a test as basic",
    "gui: mark a test as requiring GUI",
    "typing: mark a test as requiring type checking",
    "example: mark a test as an example",
]
